# CControl

./: .cproject  .gitattributes  .gitignore  .project  CControl.pro  CControl.sln  CMakeLists.txt  CMakePresets.json  README.md
Debug/: CControl  makefile  massif.out.4274  massif.out.4294  massif.out.4328  massif.out.4369  massif.out.4410  sources.mk
Debug/src/: .gitignore  Main.d  subdir.mk
Debug/src/Adaptive Model Predictive Control/: Adaptive_Model_Predictive_Control.d  subdir.mk
Debug/src/Adaptive Model Predictive Control/Sources/: Algebra.d  Filtration.d  Identification.d  Prediction.d  subdir.mk
Debug/src/Adaptive_Model_Predictive_Control/Sources/: Algebra.d  Filtration.d  Identification.d  Prediction.d  Tools.d  subdir.mk
Debug/src/CControl/Sources/: Algebra.d  Estimation.d  Feedback.d  Identification.d  Simplex.d  State_Feedback.d  Tools.d  subdir.mk
Debug/src/qpOASES/Source/: Bounds.d  Constraints.d  Flipper.d  Indexlist.d  Matrices.d  MessageHandling.d  OQPinterface.d  Options.d  QProblem.d  QProblemB.d  Utils.d  subdir.mk
Projects/Fan Controller/Fan Controller/: .cproject  .mxproject  .project  Fan Controller.elf.launch  Fan Controller.ioc  STM32F401RE_FLASH.ld
Projects/Fan Controller/Fan Controller/Debug/: Fan Controller.elf  Fan Controller.hex  Fan Controller.list  Fan Controller.map
Projects/Fan Controller/Fan Controller/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Projects/Fan Controller/Fan Controller/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Projects/Fan Controller/Identification and simulation/: h1.mat  measurements.m  simu.m
Projects/SR-UKF/: sr-ukf-parameter-estimation.m  sr-ukf-state-estimation.m  sr-ukf.m
Projects/Stepper Motor Controller/: Read me! STM32CubeIDE 1.3.0
Projects/Stepper Motor Controller/Model Reference Adaptive CAN-Bus Controller/: .cproject  .mxproject  .project  Model Reference Adaptive CAN-Bus Controller.ioc  Model Reference Adaptive CAN-Bus Controller.launch
Projects/Stepper Motor Controller/Model Reference Adaptive CAN-Bus Controller/Debug/: Model Reference Adaptive CAN-Bus Controller.elf  Model Reference Adaptive CAN-Bus Controller.list  Model Reference Adaptive CAN-Bus Controller.map  makefile  objects.list  sources.mk
Projects/Temperature Controller/Model Predictive Integral Temperature Controller/: .cproject  .mxproject  .project  Adaptive Model Predictive Temperature Controller Debug.launch  Model Predictive Integral Temperature Controller Debug.launch  Model Predictive Integral Temperature Controller.ioc  STM32F446RETX_FLASH.ld  STM32F446RETX_RAM.ld
Projects/Temperature Controller/Model Predictive Integral Temperature Controller/Debug/: Model Predictive Integral Temperature Controller.elf  Model Predictive Integral Temperature Controller.list  Model Predictive Integral Temperature Controller.map  makefile  objects.list  sources.mk
src/: CControl.vcxproj  CControl.vcxproj.filters  Main.c
src/CControl/: ccontrol.h
src/CControl/Documents/: ReadMe.odt
src/CControl/Documents/Examples/: Main.txt
src/CControl/Headers/: Configurations.h  Enums.h  Functions.h  defines.h  enums.h  functions.h  headers.h  macros.h  structs.h  typedefs.h  unions.h
src/CControl/Sources/: Algebra.c  Algorithms.c  Estimation.c  Feedback.c  Identification.c  Tools.c  sources.h
src/CControl/Sources/ArtificialIntelligence/: Astar.c  artificialintelligence.h  inpolygon.c  point_in_polygon.c
src/CControl/Sources/Classification/: knn.c  lbph.c
src/CControl/Sources/ComputerVision/: computervision.h  cornerdetection.c  featuredetection.c  fisherfaces.c  generalizedhough.c  hog.c  hough.c  landmarkdetection.c  shapedetection.c  violajones.c
src/CControl/Sources/ControlEngineering/: autotuning.c  c2d.c  cab.c  controlengineering.h  dare.c  gpc.c  integral.c  kalman.c  kf.c  lqe.c  lqi.c  lqr.c  mpc.c  mrac.c  obsv.c  qmpc.c  ssint.c  stability.c  theta2ss.c
src/CControl/Sources/DifferentialEquation/: differentialequation.h  rk4.c  rk4args.c
src/CControl/Sources/Filtering/: cluster_filter.c  filtfilt.c  mcs.c  particle_filter.c  pf.c  rpca.c  sr_ukf_state_estimation.c  ukf.c
src/CControl/Sources/Hardware/: concatenate_paths.c  count_folder_names.c  (+6 more)
src/Release/CControl.tlog/: CControl.lastbuildstate
src/qpOASES/Header/: qpOASES_e.h
src/qpOASES/Source/: Bounds.c  Constraints.c  Flipper.c  Indexlist.c  Matrices.c  MessageHandling.c  OQPinterface.c  Options.c  QProblem.c  QProblemB.c  Utils.c
src/x64/Debug/: Astar.nativecodeanalysis.sarif  CControl.exe.recipe  CControl.ilk  CControl.vcxproj.FileListAbsolute.txt  CControl.vcxproj.cppwinrt_comp.rsp  CControl.vcxproj.cppwinrt_plat.cache  CControl.vcxproj.cppwinrt_plat.rsp  CControl.vcxproj.mdmerge.rsp  CControl.vcxproj.midlrt.rsp  CodeAnalysisResultManifest.txt  Main.nativecodeanalysis.sarif  adaboost.obj.enc  amax.nativecodeanalysis.sarif  amin.nativecodeanalysis.sarif  anglevector.nativecodeanalysis.sarif  anglevector.obj.enc  area.nativecodeanalysis.sarif  balance.nativecodeanalysis.sarif  c2d.nativecodeanalysis.sarif  cat.nativecodeanalysis.sarif  center.nativecodeanalysis.sarif  centroid.nativecodeanalysis.sarif  chol.nativecodeanalysis.sarif  cholupdate.nativecodeanalysis.sarif  cluster_filter.nativecodeanalysis.sarif  clusterclassification.nativecodeanalysis.sarif  clusterclassification.nativecodeanalysis.xml  clusterratio.nativecodeanalysis.sarif  clustersdistance.nativecodeanalysis.sarif  collect_data.obj.enc  concatenate_paths.nativecodeanalysis.sarif  conv2.nativecodeanalysis.sarif  conv2fft.nativecodeanalysis.sarif  cornerdetection.nativecodeanalysis.sarif  count_sub_folders.nativecodeanalysis.sarif  cov.nativecodeanalysis.sarif  covm.nativecodeanalysis.sarif  cut.nativecodeanalysis.sarif  dbscan.nativecodeanalysis.sarif  dbscan.nativecodeanalysis.xml  (+117 more)
src/x64/Release/: CControl.exe.recipe  CControl.iobj  CControl.ipdb  CControl.vcxproj.FileListAbsolute.txt  CControl.vcxproj.cppwinrt_comp.cache  CControl.vcxproj.cppwinrt_comp.rsp  CControl.vcxproj.cppwinrt_plat.rsp  CControl.vcxproj.mdmerge.rsp  CControl.vcxproj.midlrt.rsp  vc143.idb
(+32312 files in other folders)
